[package]
name = "base-converter"
version = "0.0.0"
authors = ["Charles Tison <ctison@pm.me>"]
edition = "2021"
repository = "https://github.com/ctison/base-converter-rs"
description = "Convert a number in any base to any other base"

[dependencies]
clap = { version = "4.0.19", features = ["derive"] }
anyhow = "1.0.66"
thiserror = "1.0.37"
