[package]
name = "base-converter"
version = "0.0.0"
authors = ["Charles Tison <ctison@pm.me>"]
edition = "2021"
repository = "https://github.com/ctison/base-converter"
description = "Convert a number in any base to any other base"
license = "MIT"
include = ["src/**/*.rs"]
keywords = ["base", "conversion"]
categories = ["algorithms", "command-line-utilities", "mathematics"]

[[bin]]
name = "base-converter"
required-features = ["bin"]

[dependencies]
clap = { version = "4.0.19", features = ["derive"], optional = true }
anyhow = "1.0.66"
thiserror = "1.0.37"

[features]
bin = ["dep:clap"]
