[package]
name = "base-converter"
version = "0.0.0"
authors = ["Charles Tison <ctison@pm.me>"]
edition = "2021"
repository = "https://github.com/ctison/base-converter"
description = "Convert a number in any base to any other base"
license = "MIT"
include = ["src/**/*.rs"]
keywords = ["base", "conversion"]
categories = ["algorithms", "command-line-utilities", "mathematics", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "base-converter"
required-features = ["bin"]

[dependencies]
clap = { version = "4.5.0", features = ["derive"], optional = true }
anyhow = "1.0.66"
thiserror = "1.0.37"
wasm-bindgen = { version = "0.2.83", optional = true }

[features]
bin = ["dep:clap"]
wasm = ["dep:wasm-bindgen"]
